# PyAPNs2

./: .codeclimate.yml  .drone.jsonnet  .drone.yml  .gitignore  .landscape.yml  .pylintrc  .travis.yml  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py  tox.ini
.github/: stale.yml
.github/workflows/: stale.yml
apns2/: client.py  client.pyi  credentials.py  errors.py  errors.pyi  newclient.py  payload.py  payload.pyi  tornado_client.py
test/: eckey.pem  test_client.py  test_credentials.py  test_payload.py
